--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .header {
     height: 100vh;
-    background: linear-gradient(25deg, #ED001C, #FF4500);
+    background: linear-gradient(16deg, #df0b00, #ff7702);
     position: relative;
 }
 
