--- a/style.css
+++ b/style.css
@@ -197,12 +197,14 @@ body {
     padding: 18px;
     display: flex;
     flex-wrap: wrap;
+    z-index: 999999;
     justify-content: space-between;
 }
 
 a.nav-menu-item {
     margin: 0 20px;
     color: white;
+    z-index: 999999;
 }
 
 .listing-address {
